--- a/docs/开发过程和问题.md
+++ b/docs/开发过程和问题.md
@@ -64,3 +64,72 @@ NOTE：不要将Django项目的根目录和整个项目的根目录混淆。
 
 
 
+## 2020.11.27
+
+### TODO
+
+- [ ] 添加：如何利用分析得到的词向量
+- [ ] 初步使用D3.js绘图
+
+
+
+## 2020.11.30
+
+### TODO
+
+- [x] 初步使用D3.js绘图
+
+### 问题和解决
+
+- Django项目，直接在HTML页面中写静态文件的路径也能显示
+
+
+
+## 2020.12.1
+
+### TODO
+
+- [ ] 使用echat还是d3
+
+  
+
+### 问题和解决
+
+
+
+
+
+## 2020.12.7
+
+### TODO
+
+- [ ] 
+
+- [x] 了解Neo4j数据库，并使用docker搭建
+- [x] 初步使用Neo4j数据库
+- [ ] 对已有的actor和sporter构建Neo4j数据库
+
+
+
+### 问题和解决
+
+- 由于Neo4j中 包含：节点，关系和属性，而且每个关系有方向表示。 ---》根据提取范式来映射关系的方向，还有就是节点和关系都有属性，根据提取属性的范式来填充属性。
+
+  
+
+
+
+## 2020.12.8
+
+### TODO
+
+- [ ] 了解Neo4j数据库的相关概念，熟悉Neo4j数据库的使用
+- [x] 对之前20190413的娱乐数据建立es索引
+- [x] 重构ES建立和数据导入代码
+
+
+
+### 问题和解决
+
+- pycharm下Django会启动两个线程加载settings.py文件，加载两次，这是因为一个是用来服务，另一个是监控settings文件是否改变的。
+  - 解决：`manage.py runserver 0.0.0.0:8999 -noreload` 启动时加上一个参数。
