--- a/docs/开发过程和问题.md
+++ b/docs/开发过程和问题.md
@@ -133,3 +133,171 @@ NOTE：不要将Django项目的根目录和整个项目的根目录混淆。
 
 - pycharm下Django会启动两个线程加载settings.py文件，加载两次，这是因为一个是用来服务，另一个是监控settings文件是否改变的。
   - 解决：`manage.py runserver 0.0.0.0:8999 -noreload` 启动时加上一个参数。
+
+
+
+## 2020.12.10
+
+### TODO
+
+- [x] 将已有的entity以及其角色类别放入到neo4j数据库中
+- [ ] 将从娱乐数据中抽取得到的关系放入到neo4j数据库中
+
+
+
+### 问题和解决
+
+- 实体列表中同一个名字有多个中文的写法，以及同一个名字表示不同的人
+  - 解决：通过去掉名字中多余的符号，构建名字字典，处理之后如果是同一个名字则添加到nicknames属性中。
+
+
+
+## 2020.12.11
+
+### TODO
+
+- [ ] 将从娱乐数据中抽取得到的关系放入到neo4j数据库中
+- [ ] 对每个抽取的关系添加范式编号，根据范式和实体类型判断是属性还是关系
+
+  
+
+
+### 问题和解决
+
+
+
+## 2020.12.12
+
+### TODO
+
+- [ ] 修改debu_logger的输出
+- [ ] 22/
+
+
+
+### 问题和解决
+
+- OpenIE是输入实体对，然后根据范式来抽取两者之间的关系，但是中文需要偏正结构修正，例如：`习近平主席访问奥巴马总统先生` dp得到的是`主席 访问 先生` 三者之间的关系，但也是`习近平 奥巴马`实体对儿之间的关系，也正是我们想要得到的信息。 由于中文中偏正短语的存在，其中往往修饰词是命名实体而中心词是dp的主语或者宾语。---》而中心词往往都是修饰词（命名实体）的属性，同时可以将通过偏正短语得到的信息作为命名实体属性的信息补充。得到：`习近平 是 主席`，`奥巴马 是 总统`
+
+  NOTE：这里的偏正结构和DSNF1不冲突，DSNF1是两个实体之间符合的结构。
+
+  实体的某些属性也可以作为关系， 例如： `中国 主席 习近平`
+
+
+
+## 2020.12.13
+
+### TODO	
+
+无
+
+### 问题和解决
+
+-
+
+
+
+## 2020.12.14
+
+### TODO
+
+
+
+### 问题和解决
+
+- DSNF1实际抽取时的各种情况
+
+  ```markdown
+  美国 总统 奥巴马
+  美国 的 奥巴马 总统
+  美国 总统 先生 奥巴马
+  ```
+
+- DSNF2实际抽取
+
+  ```markdown
+  SBV_VOB函数
+  1 习近平 主席 访问 奥巴马 总统       -》 {习近平，奥巴马} -》偏正修正（主席， 总统）
+  2 习近平 主席 访问 奥巴马 总统 先生   -》{习近平，奥巴马} -》偏正修正（主席， 总统）但是，此时 先生 是宾语，因此要处理该情况
+  3 奥巴马 总统 先生 访问 习近平 主席      （补充）
+  4 奥巴马 总统 先生 访问 习近平 主席 同志  （补充）
+  
+  补充完之后最多处理两层修饰
+  ```
+
+- 一些偏正修正不是实体属性
+
+  ```markdonw
+  例如： 华盛顿 警方 发现 证据   （NOTE：抽不出来，因为只有一个实体）
+  想要说的是：这里 警方 并不是 华盛顿 属性。
+  ```
+
+  
+
+- 如何对抽取出的属性（偏正短语）进行标记属性类型
+
+  
+
+- 要不要只保证实体对中有一个命名实体就可以，这样能抽取更多的关系三元组
+
+
+
+- is_entity, is_named_entity应该作为Word类的方法
+- 三元组中的relation为什么要使用relation_list，什么时候一个relation需要多个词？
+  - DSNF3 功能动词：发表演讲
+  - DSNF4 不及物动词： 毕业于
+
+- 在使用ltp时，添加自定义的词典，防止把一些实体分词分开，例如：“同济大学”
+
+  使用词典很好的解决了这个问题，但是要扩充词典的词的数量需要人工
+
+  TODO；机构名，地名词典
+
+- 需要在is_named_entity中添加， nz 专有名词，例如： Google
+
+- 对于DSNF5和DSNF6，主语和宾语并列的两种情况处理：
+
+  不需要修改什么，只需按照直接宾语/主语去分析，然后把宾语/主语替换成并列的宾语/主语
+
+  NOTE：并列的宾语/主语 都可能出现在DSNF4， DSNF2，DSNF3，DSNF7中，因此都要考虑
+
+  ```markdown
+  宾语或者主语并列的情况：
+  根据DP的分析原理可知，当有多个并列主语/宾语的时：除第一个外，其余的都是和第一个存在COO的一寸关系。
+  NOTE:	如果主语/宾语存在偏正结构，都是偏正结构的中心词存在关系。因此要找出实体所在偏正结构的中心词。
+  例如：阿里巴巴公司和淘宝集团。 -》公司 和 集团 之间是COO关系。
+  
+  --》 这里实现：最多一个层修饰。
+  ```
+
+  
+
+  
+
+  NOTE: 对于DSNF2，DSNF3，DSNF7都需要考虑并列动词的情况，并且需要判断在句法上并列的动词是否符合是同一对主宾
+
+- 大部分都考虑了一层的偏正短语
+
+  例如：奥巴马总统-》只考虑到总统， 而对于 奥巴马总统先生 则抽取不出来
+
+  但是：应该很多都小于等于一层。
+
+- 原代码中的DSNF3的 并列动词 处理错误。
+
+- 目前：最多处理并列的两个动词（可以实现多个，按照顺序找）
+
+
+
+
+
+## 2020.12.15
+
+### TODO
+
+减少进入SBV VOB函数的次数
+
+### 问题和解决
+
+- 重构函数while解决无限次ATT情况
+- 解藕 determine_relation 使得其返回verbs
+- 修正DSNF3中动词寻找的方法
